[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameObjects/enemies/enemy2.gd" type="Script" id=1]
[ext_resource path="res://images/enemy2.png" type="Texture" id=2]
[ext_resource path="res://images/enemy2_blade.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="CircleShape2D" id=2]
radius = 750.0

[node name="Enemy2" type="KinematicBody2D" groups=[
"Melee",
]]
editor/display_folded = true
position = Vector2( 0, -0.857376 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="." groups=[
"Enemy",
]]
visible = false
shape = SubResource( 1 )

[node name="Vision" type="Area2D" parent="."]

[node name="VisionRange" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 2 )

[node name="CoolDownTimer" type="Timer" parent="."]

[node name="Blade1" type="Sprite" parent="."]
scale = Vector2( 9, 9 )
z_index = -1
texture = ExtResource( 3 )

[node name="Blade2" type="Sprite" parent="."]
rotation = 0.785398
scale = Vector2( 9, 9 )
z_index = -1
texture = ExtResource( 3 )
[connection signal="body_entered" from="Vision" to="." method="_found_player"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_CoolDownTimer_timeout"]
